--- a/resultados/FLAxRAC10222025/index.html
+++ b/resultados/FLAxRAC10222025/index.html
@@ -8,7 +8,7 @@
     <meta property="og:url" content="https://www.osinvictos.com.br/resultados/FLAxRAC10222025">
     <meta property="og:title" content="#FLAxRAC 1:0"/>
     <meta property="og:description" content="Copa Libertadores da America 2025 - Semi-final"/>
-    <meta property="og:image" content="https://www.osinvictos.com.br/resultados/FLAxRAC10222025/bgFLAxRAC1a0.svg"/>
+    <meta property="og:image" content="https://www.osinvictos.com.br/resultados/FLAxRAC10222025/bgFLAxRAC1a0.png"/>
     <meta property="og:image:width" content="580"/>
     <meta property="og:image:height" content="464"/>
     <meta name="google-adsense-account" content="ca-pub-6390604470898441">
