salva alterações locais antes do rebase

--- a/quotes.html
+++ b/quotes.html
@@ -5,14 +5,13 @@
     <title>OS INVICTOS -- Head-Coach Quotes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.osinvictos.com.br/quotes/">
+    <meta property="og:url" content="https://www.osinvictos.com.br/">
     <meta property="og:title" content="Sports Social Network / WEB 3.0"/>
     <meta property="og:description" content="Head-coach's Quotes'"/>
-    <meta property="og:image" content="https://sportsocialnet.vercel.app/assets/quotes.png"/>
+    <meta property="og:image" content="https://www.osinvictos.com.br/assets/quotes.png"/>
     <meta property="og:image:width" content="580"/>
     <meta property="og:image:height" content="464"/>
     <meta name="google-adsense-account" content="ca-pub-6390604470898441">
-    <link rel="stylesheet" href="https://sportsocialnet.vercel.app/dashboard/styles.css">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZDWS2F3NE8"></script>
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
