--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2,17 +2,17 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>OS INVICTOS -- xPlain Tactic'</title>
+    <title>OS INVICTOS -- Campo Tático Interativo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.osinvictos.com.br/">
+    <meta property="og:url" content="https://www.osinvictos.com.br/dashboard/">
     <meta property="og:title" content="Sports Social Network / WEB 3.0"/>
     <meta property="og:description" content="Converse com a IA do Treinador José Mourinho n@ Campo tático interativo"/>
     <meta property="og:image" content="https://sportsocialnet.vercel.app/assets/xplain.png"/>
     <meta property="og:image:width" content="580"/>
     <meta property="og:image:height" content="464"/>
     <meta name="google-adsense-account" content="ca-pub-6390604470898441">
-    <link rel="stylesheet" href="https://sportsocialnet.vercel.app/dashboard/styles.css">
+    <link rel="stylesheet" href="https://www.osinvictos.com.br/dashboard/styles.css">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZDWS2F3NE8"></script>
     <script>
@@ -24,7 +24,7 @@
     </script>
   <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
 </head>
-<body style="background-image:url('https://sportsocialnet.vercel.app/dashboard/img/estadium.jpg'); background-size:cover; background-repeat:no-repeat; background-position:center;">
+<body style="background-image:url('https://www.osinvictos.com.br/dashboard/img/estadium.jpg'); background-size:cover; background-repeat:no-repeat; background-position:center;">
 
   <!-- ===== Campo Tático ===== -->
     <div id="background-square" class="background-square"></div>
