--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <meta property="og:url" content="https://www.osinvictos.com.br/">
     <meta property="og:title" content="Sports Social Network / WEB 3.0"/>
     <meta property="og:description" content="Converse com a IA do Treinador José Mourinho n@ Campo tático interativo"/>
-    <meta property="og:image" content="https://sportsocialnet.vercel.app/assets/logotaca.png"/>
+    <meta property="og:image" content="https://www.osinvictos.com.br/assets/logotaca.png"/>
     <meta property="og:image:width" content="580"/>
     <meta property="og:image:height" content="464"/>
     <meta name="google-adsense-account" content="ca-pub-6390604470898441">
-    <link rel="stylesheet" href="https://sportsocialnet.vercel.app/dashboard/styles.css">
+    <link rel="stylesheet" href="https://www.osinvictos.com.br/styles.css">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZDWS2F3NE8"></script>
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
