update og:image to refresh WhatsApp c1ache

--- a/resultados/FLAxRAC22102025/index.html
+++ b/resultados/FLAxRAC22102025/index.html
@@ -5,26 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Entrevista do Galinho de Ouro | InvictoPRESS</title>
 
-  <!-- Tailwind CSS -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <!-- SEO -->
+  <meta name="description" content="Zico fala sobre a força defensiva do Flamengo e do Racing na semifinal da Libertadores 2025. 'O Manto Sagrado exige respeito e dedicação', diz o Galinho de Ouro.">
+  <meta name="author" content="InvictoPRESS">
+  <meta name="robots" content="index, follow">
 
   <!-- Open Graph -->
   <meta property="og:type" content="article">
+  <meta property="og:site_name" content="InvictoPRESS">
   <meta property="og:url" content="https://www.osinvictos.com.br/resultados/FLAxRAC22102025/">
   <meta property="og:title" content="Entrevista do Galinho de Ouro para o InvictoPRESS | #FLAxRAC 1:0">
   <meta property="og:description" content="Zico fala sobre a força defensiva do Flamengo e do Racing na semifinal da Libertadores 2025. 'O Manto Sagrado exige respeito e dedicação', diz o Galinho.">
-<meta property="og:image" content="https://www.osinvictos.com.br/resultados/FLAxRAC22102025/bgFLAxRAC1a0.png?v=3">
-<meta property="og:image:secure_url" content="https://www.osinvictos.com.br/resultados/FLAxRAC22102025/bgFLAxRAC1a0.png">
-<meta property="og:image:type" content="image/png">
-<meta property="og:image:alt" content="#FLAxRAC 1:0 — Libertadores 2025">
 
+  <!-- Imagem de destaque -->
+  <meta property="og:image" content="https://www.osinvictos.com.br/resultados/FLAxRAC22102025/bgFLAxRAC1a0.png?v=3">
+  <meta property="og:image:secure_url" content="https://www.osinvictos.com.br/resultados/FLAxRAC22102025/bgFLAxRAC1a0.png?v=3">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="580">
+  <meta property="og:image:height" content="464">
+  <meta property="og:image:alt" content="#FLAxRAC 1:0 — Libertadores 2025, entrevista com Zico">
 
-  <!-- Twitter Card -->
+  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Entrevista do Galinho de Ouro | InvictoPRESS">
   <meta name="twitter:description" content="Zico comenta a semifinal entre Flamengo e Racing pela Libertadores 2025.">
-  <meta name="twitter:image" content="https://www.osinvictos.com.br/resultados/FLAxRAC22102025/bgFLAxRAC1a0.png">
+  <meta name="twitter:image" content="https://www.osinvictos.com.br/resultados/FLAxRAC22102025/bgFLAxRAC1a0.png?v=3">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="https://www.osinvictos.com.br/assets/icon-book.png">
+
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
   <style>
     body { 
