--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ document.addEventListener("DOMContentLoaded", () => {
     </div>
 
     <div class="thumbnail orbit orbit-3">
-     <a href="./quotes.html">Frases<br>de<br>Coach!</a>
+     <a href="/quotes.html">Frases<br>de<br>Coach!</a>
     </div>
 
     <div class="thumbnail orbit orbit-4">
