--- a/index.html
+++ b/index.html
@@ -289,15 +289,15 @@ document.addEventListener("DOMContentLoaded", () => {
     </div>
 
     <div class="thumbnail orbit orbit-3">
-     <a href="./quotes.html">Frases<br>de<br>Coach!</a>
+     <a href="/quotes.html">Frases<br>de<br>Coach!</a>
     </div>
 
     <div class="thumbnail orbit orbit-4">
-      <a href="./dashboard/">Mesa<br>Tática</a>
+      <a href="/dashboard/">Mesa<br>Tática</a>
     </div>
 
     <div class="thumbnail orbit orbit-5">
-      <a href="./book/">Agenda<br>do<br>Coach!</a>
+      <a href="/book/">Agenda<br>do<br>Coach!</a>
     </div>
 <div id="coach-quotes">
   <div class="quote-box">1️⃣ "Algumas pessoas acreditam que o futebol é uma questão de vida ou morte. Essa atitude me decepciona. É mais importante que isso. "- Bill Shankly</div>
