--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ document.addEventListener("DOMContentLoaded", () => {
     </div>
 
     <div class="thumbnail orbit orbit-4">
-      <a href="/dashboard/">Mesa<br>Tática</a>
+      <a href="/dashboard.html">Campo<br>Tático</a>
     </div>
 
     <div class="thumbnail orbit orbit-5">
