--- a/dashboard.html
+++ b/dashboard.html
@@ -66,16 +66,16 @@
     }
 
     /* posições manuais (espalhadas ao redor do logo, iguais estilo do index) */
-    .orbit-1  { top: 8%;   left: 48%; transform: translate(-50%,-50%); background-image: url('assets/escudo-racing.svg'); }
-    .orbit-2  { top: 18%;  right: 22%; transform: translate(50%,0);   background-image: url('assets/escudo-bocajuniors.png'); }
-    .orbit-3  { top: 40%;  right: 5%;  transform: translate(0,-50%); background-image: url('assets/escudo-riverplate.png'); }
-    .orbit-4  { bottom: 30%; right: 10%; transform: translate(0,0);  background-image: url('assets/escudo-palmeiras.svg'); }
-    .orbit-5  { bottom: 18%; left: 70%; transform: translate(0,0);  background-image: url('assets/escudo-santos.png'); }
-    .orbit-6  { bottom: 16%;  left: 45%; transform: translate(-50%,0);  background-image: url('assets/escudo-guaranifc.png'); }
-    .orbit-7  { bottom: 15%; left: 20%; transform: translate(0,0);    background-image: url('assets/escudo-milan.svg'); }
-    .orbit-8  { bottom: 38%; left: 18%;  transform: translate(0,0);    background-image: url('assets/escudo-juventus.png'); }
-    .orbit-9  { top: 32%;  left: 10%; transform: translate(0,0);      background-image: url('assets/escudo-scinternacional.svg'); }
-    .orbit-10 { top: 15%;  left: 32%; transform: translate(0,0);      background-image: url('assets/escudo-flamengo.svg'); }
+    .orbit-1  { top: 8%;   left: 48%; transform: translate(-50%,-50%); background-image: url('/assets/escudo-racing.svg'); }
+    .orbit-2  { top: 18%;  right: 22%; transform: translate(50%,0);   background-image: url('/assets/escudo-bocajuniors.png'); }
+    .orbit-3  { top: 40%;  right: 5%;  transform: translate(0,-50%); background-image: url('/assets/escudo-riverplate.png'); }
+    .orbit-4  { bottom: 30%; right: 10%; transform: translate(0,0);  background-image: url('/assets/escudo-palmeiras.svg'); }
+    .orbit-5  { bottom: 18%; left: 70%; transform: translate(0,0);  background-image: url('/assets/escudo-santos.png'); }
+    .orbit-6  { bottom: 16%;  left: 45%; transform: translate(-50%,0);  background-image: url('/assets/escudo-guaranifc.png'); }
+    .orbit-7  { bottom: 15%; left: 20%; transform: translate(0,0);    background-image: url('/assets/escudo-milan.svg'); }
+    .orbit-8  { bottom: 38%; left: 18%;  transform: translate(0,0);    background-image: url('/assets/escudo-juventus.png'); }
+    .orbit-9  { top: 32%;  left: 10%; transform: translate(0,0);      background-image: url('/assets/escudo-scinternacional.svg'); }
+    .orbit-10 { top: 15%;  left: 32%; transform: translate(0,0);      background-image: url('/assets/escudo-flamengo.svg'); }
 
     /* responsividade */
     @media (max-width:768px){
